--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d02552;">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f15f79;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="images/3625167.png" alt="" width="35" height="34" class="d-inline-block align-text-top"> Pocket Notes</a>
@@ -11,10 +11,7 @@
             <a class="nav-link active" aria-current="page" href="javascript:location.reload()">Home</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" id= "searchTxt" aria-label="Search">
-          <button type="button" class="btn btn-outline-dark">Search</button>
-        </form>
+
       </div>
     </div>
     </nav>
