--- a/templates/partials/nav2.hbs
+++ b/templates/partials/nav2.hbs
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #d02552;">
+ <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #f15f79;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="images/3625167.png" alt="" width="35" height="34" class="d-inline-block align-text-top"> Pocket Notes</a>
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" href="javascript:location.reload()">Home</a>
           </li>
            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/logout">LogOut</a>
+            <a class="nav-link active" aria-current="page"href="/logout">LogOut</a>
           </li>
         </ul>
         <form class="d-flex">
