--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+	
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-notes-16.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -13,6 +14,8 @@
   </head>
   <body>
 {{>nav}}
+
+
 <div class="login-reg-panel">
 		<div class="login-info-box">
 			<h2>Have an account?</h2>
@@ -28,17 +31,22 @@
 			<input type="radio" name="active-log-panel" id="log-login-show">
 		</div>
 							
-		<div class="white-panel">
-			<div class="login-show">
+		<div class="white-panel" id="white-pane">
+			<div class="login-show show-log-panel" id="lgin">
 				<h2>LOGIN</h2>
                 <form id="login-controller">
 				<input type="email" placeholder="Email" name="email" id="lg-email">
 				<input type="password" placeholder="Password" name="password" id="lg-pass">
 				<input type="submit" value="Login" >
+				<span class="mobile" ;>
+				<h2>Don't have an account?</h2>
+			    <p>Make an account to Create Notes.<label id="loginToggle" onclick="toggleLogin()">Signup here</label></p>
+				
+				</span>
         </form>
-				<a href="">Forgot password?</a>
+				{{!-- <a href="">Forgot password?</a> --}}
 			</div>
-			<div class="register-show">
+			<div class="register-show" id="rgin">
 				<h2>REGISTER</h2>
            <form id="signin-controller">
 		        <input type="text" placeholder="Name" name="name" id="sg-name">
@@ -46,6 +54,11 @@
 				<input type="password" placeholder="Password" name="password" id="sg-pass">
 				<input type="password" placeholder="Confirm Password" name="confirmpassword" id="sg-cpass">
 				<input type="submit" value="Register">
+				<div class="mobile" >
+				<h2>Have an account?</h2>
+			    <p>Login to read your notes.<label id="signupToggle" onclick="toggleSignup()">Login here</label></p>
+				
+				</div>
         </form>
 			</div>
 		</div>
